fixed alignment
removed a .container

--- a/styles.css
+++ b/styles.css
@@ -9,31 +9,28 @@ background-color: blue;
 background-color: rgb(244, 240, 235);
 border: 0%;
 border-radius: 0%;
+padding-left: 20px;
 }
-
-.navbar-brand{
-    color: black;    
-}
-
-.container{
-    margin-left: 10px;
-    padding-left: 10px;
-}
-
 
 ul.nav, a{
     text-align: center;
     text-decoration: none;
-    background-color:aliceblue;
     font-size: large;
 }
 
 .navbar-toggler{
-    margin-right: 35px;
+    margin-right: 20px;
     background-color: blue;
     padding: 1px;
 }
 
+#main-content{
+    margin: auto;
+}
+.container{
+    margin-left: 10px;
+    padding-left: 10px;
+}
 
 .container-md{
     text-align: center;
@@ -45,13 +42,12 @@ ul.nav, a{
 
 .box1, .box2, .box3{
     color: blue;
-    padding: 2px;
-    margin: 2px;
+    padding: 10px;
+    margin: 5px;
     position: relative;
-
 }
 .box1{
-    background-color: rgb(226, 241, 226);
+    background-color: aliceblue;
     float: left;
 }
 .box1>p>a {
@@ -113,7 +109,7 @@ p>a, {
 
         /*body*/    
  .box1,.box2,.box3{
-		height: 1000px;
+		height: 1200px;
         width: 100%;
 	    }
 
@@ -148,4 +144,5 @@ p>a, {
    .box1,.box2,.box3{
     width: 100%; 
     height: 1200px;
+}
 }
